--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>WSToken</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>WSToken</name>
-	<description>Servicio REST que genera y valida tokens de autenticacion mediante algoritmo SHA-256</description>
+	<description>Servicio REST que genera y valida un token mediante algoritmo SHA-256</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -34,35 +34,26 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
 		<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-		
+
 	</dependencies>
 
 	<build>
@@ -71,6 +62,32 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			 <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.8.10</version>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>prepare-agent</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>report</id>
+                    <phase>verify</phase>
+                    <goals>
+                        <goal>report</goal>
+                    </goals>
+                </execution>
+            </executions>
+            <configuration>
+		        <excludes>
+		            <exclude>**/WsTokenApplication.class</exclude>
+		            <exclude>**/dto/ErrorDto.class</exclude>
+            		<exclude>**/dto/TokenResponseDto.class</exclude>
+		        </excludes>
+		    </configuration>
+        </plugin>
 		</plugins>
 	</build>
 
